// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast > CloseButton.vue should renders OXD ToastCloseButton 1`] = `
<div class="std-toast-close-container">
  <div class="std-toast-close std-toast-close--default" role="button"> × </div>
</div>
`;

exports[`Toast > CloseButton.vue should renders OXD ToastCloseButton error 1`] = `
<div class="std-toast-close-container">
  <div class="std-toast-close std-toast-close--error" role="button"> × </div>
</div>
`;

exports[`Toast > CloseButton.vue should renders OXD ToastCloseButton info 1`] = `
<div class="std-toast-close-container">
  <div class="std-toast-close std-toast-close--info" role="button"> × </div>
</div>
`;

exports[`Toast > CloseButton.vue should renders OXD ToastCloseButton success 1`] = `
<div class="std-toast-close-container">
  <div class="std-toast-close std-toast-close--success" role="button"> × </div>
</div>
`;

exports[`Toast > CloseButton.vue should renders OXD ToastCloseButton warn 1`] = `
<div class="std-toast-close-container">
  <div class="std-toast-close std-toast-close--warn" role="button"> × </div>
</div>
`;
